--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,7 @@
 	border-radius: 15px;
 	max-width: 400px;
 	margin: 5rem auto;
+	background-color: rgb(80, 147, 211);
 
 	&__form {
 		display: flex;
