--- a/src/App.scss
+++ b/src/App.scss
@@ -16,26 +16,19 @@
 		flex-direction: column;
 		max-width: 400px;
 		height: 100%;
-		padding: 2rem;
-
-		&--label {
-			align-self: flex-start;
-			margin-top: 0.5rem;
-		}
+		padding-bottom: 2rem;
 
 		&--submit-btn {
 			padding: 0.75rem 1.5rem;
 			font-size: 1rem;
 			margin-top: 1.5rem;
-			border: 1px darkblue solid;
+			border: 2px darkblue solid;
 			border-radius: 15px;
-		}
-	}
+			cursor: pointer;
 
-	&__radio-buttons {
-		width: 100%;
-		display: flex;
-		justify-content: space-around;
-		margin: 0.75rem 0;
+			&:hover {
+				background-color: whitesmoke;
+			}
+		}
 	}
 }
