--- a/src/App.scss
+++ b/src/App.scss
@@ -1,34 +1,47 @@
 .container {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	border: 3px solid black;
-	border-radius: 15px;
-	max-width: 400px;
-	margin: 5rem auto;
-	background-color: rgb(80, 147, 211);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 3px solid black;
+  border-radius: 15px;
+  max-width: 400px;
+  margin: 5rem auto;
+  background-color: rgb(80, 147, 211);
+  position: relative;
 
-	&__form {
-		display: flex;
-		align-items: center;
-		justify-content: space-around;
-		flex-direction: column;
-		max-width: 400px;
-		height: 100%;
-		padding-bottom: 2rem;
+  &__form {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
+    max-width: 400px;
+    height: 100%;
+    padding-bottom: 2rem;
 
-		&--submit-btn {
-			padding: 0.75rem 1.5rem;
-			font-size: 1rem;
-			margin-top: 1.5rem;
-			border: 2px darkblue solid;
-			border-radius: 15px;
-			cursor: pointer;
+    &--submit-btn {
+      padding: 0.75rem 1.5rem;
+      font-size: 1rem;
+      margin-top: 1.5rem;
+      border: 2px darkblue solid;
+      border-radius: 15px;
+      cursor: pointer;
 
-			&:hover {
-				background-color: whitesmoke;
-			}
-		}
-	}
+      &:hover {
+        background-color: rgb(218, 218, 218);
+      }
+
+      &:active {
+        background-color: rgb(192, 192, 192);
+      }
+    }
+
+    &--alert-message {
+      position: absolute;
+      bottom: 10px;
+      color: darkred;
+      font-size: 0.75rem;
+      margin-top: 0.5rem;
+    }
+  }
 }
