--- a/src/App.scss
+++ b/src/App.scss
@@ -9,6 +9,7 @@
   margin: 5rem auto;
   background-color: rgb(80, 147, 211);
   position: relative;
+  transition: all 0.3s ease-in-out;
 
   &__form {
     display: flex;
@@ -20,7 +21,8 @@
     padding-bottom: 2rem;
 
     &--submit-btn {
-      padding: 0.75rem 1.5rem;
+      width: 100px;
+      height: 50px;
       font-size: 1rem;
       margin-top: 1.5rem;
       border: 2px darkblue solid;
@@ -42,6 +44,25 @@
       color: darkred;
       font-size: 0.75rem;
       margin-top: 0.5rem;
+    }
+
+    &--loader {
+      border: 5px solid #f3f3f3;
+      border-top: 5px solid #3498db;
+      border-radius: 50%;
+      width: 10px;
+      height: 10px;
+      margin: 0 auto;
+      animation: spin 1s linear infinite;
+
+      @keyframes spin {
+        0% {
+          transform: rotate(0deg);
+        }
+        100% {
+          transform: rotate(360deg);
+        }
+      }
     }
   }
 }
