--- a/src/components/select-options/select-options.scss
+++ b/src/components/select-options/select-options.scss
@@ -6,7 +6,7 @@
 
   &__select {
     width: 100%;
-    margin: 0.5rem 0;
+    margin-top: 0.5rem;
     padding: 0.5rem;
     border-radius: 25px;
     font-size: 1rem;
