--- a/src/App.scss
+++ b/src/App.scss
@@ -38,7 +38,7 @@
       }
     }
 
-    &--number-error {
+    &--id-error {
       position: absolute;
       color: darkred;
       font-size: 0.75rem;
@@ -46,7 +46,7 @@
       bottom: 305px;
     }
 
-    &--alert-message {
+    &--submit-error {
       position: absolute;
       bottom: 10px;
       color: darkred;
