--- a/src/App.scss
+++ b/src/App.scss
@@ -1,13 +1,15 @@
+@import './styles/colors';
+
 .container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 3px solid black;
+  border: 3px solid var(--black);
   border-radius: 15px;
   max-width: 400px;
   margin: 5rem auto;
-  background-color: rgb(80, 147, 211);
+  background-color: var(--background-color-blue);
   position: relative;
   transition: all 0.3s ease-in-out;
 
@@ -25,22 +27,22 @@
       height: 50px;
       font-size: 1rem;
       margin-top: 1.5rem;
-      border: 2px darkblue solid;
+      border: 2px var(--submit-btn-border) solid;
       border-radius: 15px;
       cursor: pointer;
 
       &:hover {
-        background-color: rgb(218, 218, 218);
+        background-color: var(--submit-btn-hover);
       }
 
       &:active {
-        background-color: rgb(192, 192, 192);
+        background-color: var(rgb(192, 192, 192));
       }
     }
 
     &--id-error {
       position: absolute;
-      color: darkred;
+      color: var(--error-color);
       font-size: 0.75rem;
       font-weight: bold;
       bottom: 305px;
@@ -49,7 +51,7 @@
     &--submit-error {
       position: absolute;
       bottom: 10px;
-      color: darkred;
+      color: var(--error-color);
       font-size: 0.75rem;
       margin-top: 0.5rem;
       font-weight: bold;
@@ -64,8 +66,8 @@
     }
 
     &--loader {
-      border: 5px solid #f3f3f3;
-      border-top: 5px solid #3498db;
+      border: 5px solid var(--loader-border);
+      border-top: 5px solid var(--loader-top);
       border-radius: 50%;
       width: 10px;
       height: 10px;
